tried to fix squished calendar on home

--- a/staticfiles/pacApp/assets/css/table.css
+++ b/staticfiles/pacApp/assets/css/table.css
@@ -8,7 +8,7 @@
   display: -ms-flexbox;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   flex-wrap: wrap;
   padding:0px 0px 0px 0px;
   table-layout:fixed;
@@ -16,22 +16,11 @@
 
 #SETUP AND SPACING
 
-.wrap-table100 {
-  width: 1300px;
-}
-
-.column100 {
-  width: 130px;
-}
 
 .column100:hover {
   background-color: #f2f2f2;
 }
 
-.column100.column1 {
-  width: 265px;
-
-}
 
 .column100.column1:hover {
   background-color: #f2f2f2;
@@ -46,19 +35,26 @@
 }
 
 
-th.studio,
-td.studio {
-   padding:0 0.3em 0 0.3em;
-   font-size:0.85em;
- 
+.row100 td {
+  padding: 0.6em 0.4em 0.6em 0.4em;
+  font-size: 0.9em;
+  max-width:5em;
+  text-align:center;
 }
 
-.row100 td {
-  padding: 0.4em;
-  font-size: 0.8em;
-  width:0.3em;
-  height: 0.3em;
+th {
+  width:10em;
 }
+
+/* more recent is priority css */ 
+th.studio,
+td.studio {
+  padding: 2em 5em 2 1em;
+  font-size:0.9em;
+  text-align:left;
+  max-width:10em;
+}
+
 
 #TABLE STYLING
 .table100.ver1 td {
